--- a/objects/_objects.forms.scss
+++ b/objects/_objects.forms.scss
@@ -15,6 +15,7 @@
         color: #146999;
         font-weight: $weight-bold;
         border: 2px solid #DDD;
+        margin-right: .3em;
     }
 
     .btn { margin-top: 0; margin-bottom: 0; }
