--- a/objects/_objects.typography.scss
+++ b/objects/_objects.typography.scss
@@ -88,14 +88,13 @@ $hint-inline-active-colour:     black;
 .link-action {
     transition: none;
     font-size: 90%;
-    margin: 0 .3em;
 }
 
 // Inline block that might be or might not be used inside a dynamic content.
 .inliner {
     margin-right: .3em;
 
-    & + .link-more {
+    & + .link-action {
         margin-left: 0;
     }
 }
